--- a/app/frontend/templates/index.html
+++ b/app/frontend/templates/index.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
-{% block title %}Heroes{% endblock %}
-{% block head %}
-    {{ super() }}
-{% endblock %}
+{% block title %}Concert Hall{% endblock %}
+
 {% block content %}
 
 {% endblock %}
