--- a/app/frontend/templates/base.html
+++ b/app/frontend/templates/base.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en">  <!-- changing lang -->
 <head>
     {% block head %}
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link href="../static/main.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+        <link href="../static/theme.min.css" rel="stylesheet">
 
-    {% block styles %}
-    <!-- Bootstrap CSS -->
+        <link href="../static/main.css" rel="stylesheet">
 
-    {% endblock %}
+        {% block styles %}
+            <!-- Bootstrap CSS -->
 
-    <title>{% block title %}{% endblock %}</title>
+        {% endblock %}
+
+        <title>{% block title %}{% endblock %}</title>
     {% endblock %}
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 
 {% include 'includes/_navbar.html' %}
 
+<main class="flex-shrink-0">
+    <div class="container">
+        {% block content %}{% endblock %}
+    </div>
+</main>
 
-<div class="container my-4">
-    {% block content %}{% endblock %}
-</div>
+
+{% include 'includes/_footer.html' %}
+
+
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
         integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
@@ -34,8 +40,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
         integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
         crossorigin="anonymous"></script>
-
-
 {% block scripts %}
 {% endblock %}
 </body>
