--- a/app/frontend/templates/base.html
+++ b/app/frontend/templates/base.html
@@ -7,9 +7,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+            <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
         <link href="../static/theme.min.css" rel="stylesheet">
 
         <link href="../static/main.css" rel="stylesheet">
+
 
         {% block styles %}
             <!-- Bootstrap CSS -->
@@ -23,23 +26,23 @@
 
 {% include 'includes/_navbar.html' %}
 
-<main class="flex-shrink-0">
-    <div class="container">
-        {% block content %}{% endblock %}
-    </div>
+<main class="flex-grow-1">
+    {% block content %}{% endblock %}
 </main>
 
 
 {% include 'includes/_footer.html' %}
 
 
-
+{#<script src="https://code.jquery.com/jquery-3.6.0.min.js"#}
+{#        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>#}
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
         integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
         integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
         crossorigin="anonymous"></script>
+
 {% block scripts %}
 {% endblock %}
 </body>
