--- a/app/frontend/templates/contacts.html
+++ b/app/frontend/templates/contacts.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
-{% block title %}About Us{% endblock %}
+{% block title %}Contacts{% endblock %}
 
 {% block content %}
+<div>
 
+</div>
 {% endblock %}
