--- a/app/frontend/templates/index.html
+++ b/app/frontend/templates/index.html
@@ -3,4 +3,138 @@
 
 {% block content %}
 
+
+    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+                     aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <rect width="100%" height="100%" fill="#777"/>
+                </svg>
+
+                <div class="container">
+                    <div class="carousel-caption text-start">
+                        <h1 class="display-2">Concert Name</h1>
+                        <p>Place <i class="bi bi-dot"></i> Date</p>
+                        <p><a class="btn btn-lg btn-primary text-light" href="{{ url_for('concert_page', id=0) }}">Buy
+                            tickets</a></p>
+                    </div>
+                </div>
+            </div>
+            {% for n in range(2) %}
+                <div class="carousel-item">
+                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+                         aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                        <rect width="100%" height="100%" fill="#777"/>
+                    </svg>
+
+                    <div class="container">
+                        <div class="carousel-caption text-start">
+                            <h1 class="display-2">Concert Name {{ n }}</h1>
+                            <p>Place <i class="bi bi-dot"></i> Date</p>
+                            <p><a class="btn btn-lg btn-primary text-light" href="{{ url_for('concert_page', id=n) }}">Buy
+                                tickets</a></p>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+    <div class="container">
+
+        {% if true %}
+
+            <div class="ms-5 mb-2 d-flex">
+                <span class="fs-1 fw-light underline">Recommendations</span>
+                <img src="../static/spotify/Spotify_Logo_RGB_Green.png" class="img-fluid mt-3 ms-2"
+                     style="height: 2.5rem;"
+                     alt="Spotify">
+            </div>
+
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 mb-5">
+                {% for n in range(5) %}
+                    <div class="col">
+                        <div class="card shadow-sm">
+
+                            <svg class="bd-placeholder-img card-img-top" width="100%" height="100%"
+                                 xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
+                                 preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
+                                <rect width="100%" height="100%" fill="#55595c"/>
+                            </svg>
+
+                            <div class="card-img-overlay d-flex flex-column justify-content-start mt-5 pt-5">
+                                <h4 class="card-title text-light d-inline-block text-truncate">Card title</h4>
+                            </div>
+
+
+                            <div class="card-body fs-5">
+                                <div class="d-flex ">
+                                    <p class="card-text me-auto">Place</p>
+                                    <p class="card-text">Date</p>
+                                </div>
+                                <a href="{{ url_for('concert_page', id=n) }}"
+                                   class="stretched-link text-decoration-none"></a>
+
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+
+            </div>
+
+        {% endif %}
+
+        <div class="ms-5 mb-2">
+            <span class="fs-1 fw-light underline">Upcoming Events</span>
+        </div>
+
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 mb-5">
+            {% for n in range(5) %}
+                <div class="col">
+                    <div class="card shadow-sm">
+
+                        <svg class="bd-placeholder-img card-img-top" width="100%" height="100%"
+                             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
+                             preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
+                            <rect width="100%" height="100%" fill="#55595c"/>
+                        </svg>
+
+                        <div class="card-img-overlay d-flex flex-column justify-content-start mt-5 pt-5">
+                            <h4 class="card-title text-light d-inline-block text-truncate">Card title</h4>
+                        </div>
+
+
+                        <div class="card-body fs-5">
+                            <div class="d-flex ">
+                                <p class="card-text me-auto">Place</p>
+                                <p class="card-text">Date</p>
+                            </div>
+                            <a href="{{ url_for('concert_page', id=n) }}"
+                               class="stretched-link text-decoration-none"></a>
+
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+
+        </div>
+
+    </div>
+
 {% endblock %}
