--- a/app/frontend/templates/includes/_navbar.html
+++ b/app/frontend/templates/includes/_navbar.html
@@ -22,11 +22,11 @@
                         type="submit"><i class="bi bi-search"></i></button>
             </form>
 
-            {% if false %}
+            {% if true %}
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 justify-content-end">
                     <ul class="navbar-nav me-2 mb-2 mb-lg-0 justify-content-start">
                         <li class="nav-item">
-                            <a class="nav-link" style="color: black !important;" aria-current="page" href="#"><u>My
+                            <a class="nav-link" style="color: black !important;" aria-current="page" href="{{ url_for('tickets_page') }}"><u>My
                                 tickets</u></a>
                         </li>
                     </ul>
@@ -43,8 +43,8 @@
 
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Favorites</a></li>
-                            <li><a class="dropdown-item" href="#">Settings</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('favorites_page') }}">Favorites</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('settings_page') }}">Settings</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
