--- a/app/frontend/templates/about.html
+++ b/app/frontend/templates/about.html
@@ -2,5 +2,14 @@
 {% block title %}About Us{% endblock %}
 
 {% block content %}
+    <div class="container bg-white">
+        <h1 class="ps-2 display-4">About Us</h1>
+        <hr>
+        <div class="px-4 py-4">
+            <p>
+                We are lovely team that really wants to sleep
+            </p>
+        </div>
 
+    </div>
 {% endblock %}
