--- a/app/frontend/templates/contacts.html
+++ b/app/frontend/templates/contacts.html
@@ -2,7 +2,20 @@
 {% block title %}Contacts{% endblock %}
 
 {% block content %}
-<div>
+    <div class="container bg-white">
+        <h1 class="ps-2 display-4">Contacts</h1>
+        <hr>
+        <div class="px-4 py-4">
+            <p>
+                Bulavina Elizaveta: <a href="mailto:bulavina.liza@yandex.ru" target="_blank">bulavina.liza@yandex.ru</a>
+            </p>
+            <p>
+                Petrov Yuri: <a href="mailto:ya.claude2016@gmail.com" target="_blank">ya.claude2016@gmail.com</a>
+            </p>
+            <p>
+                Gorbushin Vladimir: <a href="mailto:gorbushin.volodja@mail.ru" target="_blank">gorbushin.volodja@mail.ru</a>
+            </p>
+        </div>
 
-</div>
+    </div>
 {% endblock %}
